<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularStudent"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formular_student_text"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nume"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:id="@+id/editNume"
                    android:inputType="text"
                    android:hint="@string/introduceti_numele"
                    android:autofillHints="name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/varsta"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:id="@+id/editVarsta"
                    android:inputType="number"
                    android:hint="@string/introduceti_varsta"
                    android:autofillHints="age"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specializare"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/editSpinner"
                    android:entries="@array/spinner_entries"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"/>
                <DatePicker
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edotData"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonStudent"
                android:text="@string/adaugare_student"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>